# interaction-fields-sandbox

./: .gitignore  CMakeLists.txt  README.md  child.c  child.h  config.h  killer.c  killer.h  main.c  main.h  runner.c  runner.h  utils.c  utils.h
rules/: general.c  seccomp_rules.h
